@@ -166,7 +166,8 @@ class Main:
                 utils.log( "    p_size: %d" % p_size )
                 _get_special_items(    playlist=self.playlist,
                                           items=1 * ( rating_videos_folder != "" ),
-                                           path=rating_videos_folder + mpaa + ".avi",
+                                           path=rating_videos_folder
+                                           mpaa=mpaa,
                                           genre="Movie Rating",
                                          writer="Movie Rating",
                                          index = index_count
